--- a/truckMileageTracker/states.plist
+++ b/truckMileageTracker/states.plist
@@ -2,55 +2,311 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-	<string>Alabama</string>
-	<string>Alaska</string>
-	<string>Arizona</string>
-	<string>Arkansas</string>
-	<string>California</string>
-	<string>Colorado</string>
-	<string>Connecticut</string>
-	<string>Delaware</string>
-	<string>Florida</string>
-	<string>Georgia</string>
-	<string>Hawaii</string>
-	<string>Idaho</string>
-	<string>Illinois</string>
-	<string>Indiana</string>
-	<string>Iowa</string>
-	<string>Kansas</string>
-	<string>Kentucky</string>
-	<string>Louisiana</string>
-	<string>Maine</string>
-	<string>Maryland</string>
-	<string>Massachusetts</string>
-	<string>Michigan</string>
-	<string>Minnesota</string>
-	<string>Mississippi</string>
-	<string>Missouri</string>
-	<string>Montana</string>
-	<string>Nebraska</string>
-	<string>Nevada</string>
-	<string>New Hampshire</string>
-	<string>New Jersey</string>
-	<string>New Mexico</string>
-	<string>New York</string>
-	<string>North Carolina</string>
-	<string>North Dakota</string>
-	<string>Ohio</string>
-	<string>Oklahoma</string>
-	<string>Oregon</string>
-	<string>Pennsylvania</string>
-	<string>Rhode Island</string>
-	<string>South Carolina</string>
-	<string>South Dakota</string>
-	<string>Tennessee</string>
-	<string>Texas</string>
-	<string>Utah</string>
-	<string>Vermont</string>
-	<string>Virginia</string>
-	<string>Washington</string>
-	<string>West Virginia</string>
-	<string>Wisconsin</string>
-	<string>Wyoming</string>
+	<dict>
+		<key>abbreviation</key>
+		<string>AL</string>
+		<key>name</key>
+		<string>Alabama</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>AK</string>
+		<key>name</key>
+		<string>Alaska</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>AZ</string>
+		<key>name</key>
+		<string>Arizona</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>AR</string>
+		<key>name</key>
+		<string>Arkansas</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>CA</string>
+		<key>name</key>
+		<string>California</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>CO</string>
+		<key>name</key>
+		<string>Colorado</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>CT</string>
+		<key>name</key>
+		<string>Connecticut</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>DE</string>
+		<key>name</key>
+		<string>Delaware</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>FL</string>
+		<key>name</key>
+		<string>Florida</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>GA</string>
+		<key>name</key>
+		<string>Georgia</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>HI</string>
+		<key>name</key>
+		<string>Hawaii</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>ID</string>
+		<key>name</key>
+		<string>Idaho</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>IL</string>
+		<key>name</key>
+		<string>Illinois</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>IN</string>
+		<key>name</key>
+		<string>Indiana</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>IA</string>
+		<key>name</key>
+		<string>Iowa</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>KS</string>
+		<key>name</key>
+		<string>Kansas</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>KY</string>
+		<key>name</key>
+		<string>Kentucky</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>LA</string>
+		<key>name</key>
+		<string>Louisiana</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>ME</string>
+		<key>name</key>
+		<string>Maine</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>MD</string>
+		<key>name</key>
+		<string>Maryland</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>MA</string>
+		<key>name</key>
+		<string>Massachusetts</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>MI</string>
+		<key>name</key>
+		<string>Michigan</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>MN</string>
+		<key>name</key>
+		<string>Minnesota</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>MS</string>
+		<key>name</key>
+		<string>Mississippi</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>MO</string>
+		<key>name</key>
+		<string>Missouri</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>MT</string>
+		<key>name</key>
+		<string>Montana</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>NE</string>
+		<key>name</key>
+		<string>Nebraska</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>NV</string>
+		<key>name</key>
+		<string>Nevada</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>NH</string>
+		<key>name</key>
+		<string>New Hampshire</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>NJ</string>
+		<key>name</key>
+		<string>New Jersey</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>NM</string>
+		<key>name</key>
+		<string>New Mexico</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>NY</string>
+		<key>name</key>
+		<string>New York</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>NC</string>
+		<key>name</key>
+		<string>North Carolina</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>ND</string>
+		<key>name</key>
+		<string>North Carolina</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>OH</string>
+		<key>name</key>
+		<string>Ohio</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>OK</string>
+		<key>name</key>
+		<string>Oklahoma</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>OR</string>
+		<key>name</key>
+		<string>Oregon</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>PA</string>
+		<key>name</key>
+		<string>Pennsylvania</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>RI</string>
+		<key>name</key>
+		<string>Rhode Island</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>SC</string>
+		<key>name</key>
+		<string>South Carolina</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>SD</string>
+		<key>name</key>
+		<string>South Dakota</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>TN</string>
+		<key>name</key>
+		<string>Tennessee</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>TX</string>
+		<key>name</key>
+		<string>Texas</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>UT</string>
+		<key>name</key>
+		<string>Utah</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>VT</string>
+		<key>name</key>
+		<string>Vermont</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>VA</string>
+		<key>name</key>
+		<string>Virginia</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>WA</string>
+		<key>name</key>
+		<string>Washington</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>WV</string>
+		<key>name</key>
+		<string>West Virginia</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>WI</string>
+		<key>name</key>
+		<string>Wisconsin</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>WY</string>
+		<key>name</key>
+		<string>Wyoming</string>
+	</dict>
+	<dict>
+		<key>abbreviation</key>
+		<string>DC</string>
+		<key>name</key>
+		<string>District Of Columbia</string>
+	</dict>
 </array>
 </plist>
